error2.log
    Checking ranvier-http v0.14.2 (F:\project\ranvier\ranvier-workspace\ranvier\http)
error[E0252]: the name `Bytes` is defined multiple times
 --> http\src\http3.rs:9:5
  |
8 | use bytes::{Buf, Bytes};
  |                  ----- previous import of the type `Bytes` here
9 | use bytes::Bytes;
  |     ^^^^^^^^^^^^ `Bytes` reimported here
  |
  = note: `Bytes` must be defined only once in the type namespace of this module

error[E0425]: cannot find value `alt_svc_h3_port` in this scope
    --> http\src\ingress.rs:1428:55
     |
1428 | ...                   #[cfg(feature = "http3")] alt_svc_h3_port,
     |                                                 ^^^^^^^^^^^^^^^
     |
help: you might have meant to use the available field
     |
1428 |                             #[cfg(feature = "http3")] self.alt_svc_h3_port,
     |                                                       +++++

error[E0425]: cannot find value `body_stream` in this scope
   --> http\src\http3.rs:172:37
    |
172 |             while let Some(frame) = body_stream.frame().await {
    |                                     ^^^^^^^^^^^ not found in this scope

warning: unused import: `DEFAULT_BODY_LIMIT`
  --> http\src\extract\multipart.rs:21:40
   |
21 | use super::{ExtractError, FromRequest, DEFAULT_BODY_LIMIT};
   |                                        ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Response` and `header::CONTENT_TYPE`
 --> http\src\sse.rs:2:12
  |
2 | use http::{header::CONTENT_TYPE, Response};
  |            ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^

warning: unused imports: `BodyExt` and `StreamBody`
 --> http\src\sse.rs:3:22
  |
3 | use http_body_util::{StreamBody, BodyExt};
  |                      ^^^^^^^^^^  ^^^^^^^

warning: unused import: `StreamExt`
 --> http\src\sse.rs:7:36
  |
7 | use futures_util::stream::{Stream, StreamExt};
  |                                    ^^^^^^^^^

warning: unused import: `bytes::Bytes`
 --> http\src\http3.rs:9:5
  |
9 | use bytes::Bytes;
  |     ^^^^^^^^^^^^

error[E0277]: the trait bound `rustls::ServerConfig: h3_quinn::quinn::crypto::ServerConfig` is not satisfied
   --> http\src\http3.rs:77:51
    |
 77 |     let server_config = ServerConfig::with_crypto(Arc::new(crypto));
    |                                                   ^^^^^^^^^^^^^^^^ the trait `h3_quinn::quinn::crypto::ServerConfig` is not implemented for `rustls::ServerConfig`
    |
help: the trait `h3_quinn::quinn::crypto::ServerConfig` is implemented for `QuicServerConfig`
   --> C:\Users\realwolf\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\quinn-proto-0.11.13\src\crypto\rustls.rs:501:1
    |
501 | impl crypto::ServerConfig for QuicServerConfig {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: required for the cast from `Arc<rustls::ServerConfig>` to `Arc<(dyn h3_quinn::quinn::crypto::ServerConfig + 'static)>`

error[E0308]: mismatched types
   --> http\src\http3.rs:116:21
    |
115 |         match h3_server.accept().await {
    |               ------------------------ this expression has type `Result<Option<RequestResolver<Connection, _>>, ConnectionError>`
116 |             Ok(Some((req, stream))) => {
    |                     ^^^^^^^^^^^^^ expected `RequestResolver<Connection, _>`, found `(_, _)`
    |
    = note: expected struct `RequestResolver<h3_quinn::Connection, _>`
                found tuple `(_, _)`
    = note: the full name for the type has been written to 'F:\project\ranvier\ranvier-workspace\ranvier\target\debug\deps\ranvier_http-cc0c36cf37e0d999.long-type-13818347102937681374.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0282]: type annotations needed
   --> http\src\http3.rs:174:25
    |
174 |                     let mut frame = frame;
    |                         ^^^^^^^^^
175 |                     if let Ok(data) = frame.into_data().map_err(|_| "not data") {
    |                                       ----- type must be known at this point
    |
help: consider giving `frame` an explicit type
    |
174 |                     let mut frame: /* Type */ = frame;
    |                                  ++++++++++++

error[E0599]: no method named `serialize_der` found for struct `rcgen::CertifiedKey` in the current scope
  --> http\src\http3.rs:41:29
   |
41 |         let cert_der = cert.serialize_der()?;
   |                             ^^^^^^^^^^^^^ method not found in `rcgen::CertifiedKey`
   |
help: one of the expressions' fields has a method of the same name
   |
41 |         let cert_der = cert.key_pair.serialize_der()?;
   |                             +++++++++

error[E0599]: no method named `serialize_private_key_der` found for struct `rcgen::CertifiedKey` in the current scope
  --> http\src\http3.rs:42:28
   |
42 |         let key_der = cert.serialize_private_key_der();
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `rcgen::CertifiedKey`

warning: irrefutable `if let` pattern
    --> http\src\ingress.rs:1549:24
     |
1549 |                     if let Ok(ref mut r) = res {
     |                        ^^^^^^^^^^^^^^^^^^^^^^^
     |
     = note: this pattern will always match, so the `if let` is useless
     = help: consider replacing the `if let` with a `let`
     = note: `#[warn(irrefutable_let_patterns)]` on by default

warning: irrefutable `if let` pattern
    --> http\src\ingress.rs:1584:20
     |
1584 |                 if let Ok(ref mut r) = fallback_res {
     |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = note: this pattern will always match, so the `if let` is useless
     = help: consider replacing the `if let` with a `let`

Some errors have detailed explanations: E0252, E0277, E0282, E0308, E0425, E0599.
For more information about an error, try `rustc --explain E0252`.
warning: `ranvier-http` (lib) generated 7 warnings
error: could not compile `ranvier-http` (lib) due to 8 previous errors; 7 warnings emitted
